testdata/typechecker/error/arrays/portfolio_UndefArray.java
// Tests that array declarations of an undefined class error.

int main() {
    UndefClass[] a;
    return 0;
}
